Fix T86298: crash when loading "corrupted" geometry node tree

The file was not really corrupted (as in, Blender did everything
correctly while saving). I only did not consider the case when
a .blend file is resaved in an older version before.